--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "^17.0.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.1",
+    "react-flip-move": "^3.0.4",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.0",
+    "react-slideshow-image": "^3.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
